added lct controllers
